# financial-tracker

./: .env.example  .gitignore  .prettierignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: .clauderules  CLAUDE.md  settings.json
.claude/agents/: api-test-writer.md  audit-fixer.md  claude-md-writter.md  code-hygienist.md  code-reviewer.md  frontend-test-writer.md  git-commiter.md  git-conventional-commiter.md  git_conventional_commiter.md  internal-architect.md  python-test-writer.md  quality-orchestrator.md  readme-architect.md  readme-badger.md  readme-orchestrator.md  readme-strategist.md  readme-writer.md  refactor-applier.md  repo-applier.md  repo-auditor.md  repo-remediator.md  test-developer-orchestrator.md  test-doctor.md  test-suite-runner.md
.github/workflows/: ci.yml  lint.yml
backend/: .env.example  Dockerfile  db.js  index.js  package-lock.json  package.json
backend/middleware/: validation.js
backend/queries/: installments.js
backend/tests/: api.expenses.test.js  api.filters.test.js  api.summary.test.js  api.trends.test.js  capCalculation.test.js  setup.js
backend/utils/: billingCycle.js  formatters.js  (+2 more)
bot/: Dockerfile  app.py  requirements.txt
config/: categories.json  holidays.json
dashboard/: Dockerfile  requirements.txt  streamlit_app.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vitest.config.js
scripts/: backup.sh  restore.sh  setup-daily-backup.sh
tests/: conftest.py  test_auth.py  test_billing_cycle.py  test_invoice_month_calculation.py  test_parser.py  test_utils.py
(+45 files in other folders)
