[project]
name = "financial-tracker"
version = "0.1.0"
description = "Personal Financial Tracker with Telegram, Postgres and React"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "psycopg[binary]==3.2.9",
    "python-dateutil==2.9.0.post0",
    "uv>=0.8.11",
    "ruff>=0.12.11",
]

[project.optional-dependencies]
bot = [
    "python-telegram-bot>=20.7,<23",
]
